--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="bower_components/impress.js/css/impress-demo.css" rel="stylesheet" />
     <link href="css/impressConsole.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <link href="css/clock.css" rel="stylesheet" />
 
 
     <link rel="shortcut icon" href="favicon.png" />
@@ -28,8 +29,12 @@
   <script src="bower_components/jquery/jquery.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
   <script src="bower_components/impress.js/js/impress.js"></script>
+  <script src="bower_components/moment/moment.js"></script>
+  <script src="bower_components/d3/d3.js"></scrip>t
   <script src="js/impressConsole.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/clock.js"></script>
+  <script src="js/d3-graph.js"></script>
 
   <script id="step-template" type="x-handlebars-template">
     <div id="{{id}}" class="{{class}}"{{#step data}}{{uri}}{{/step}}>{{{file}}}</div>
