--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
   <script src="bower_components/handlebars/handlebars.js"></script>
   <script src="bower_components/impress.js/js/impress.js"></script>
   <script src="bower_components/moment/moment.js"></script>
-  <script src="bower_components/d3/d3.js"></scrip>t
+  <script src="bower_components/d3/d3.js"></script>
   <script src="js/impressConsole.js"></script>
   <script src="js/main.js"></script>
   <script src="js/clock.js"></script>
-  <script src="js/d3-graph.js"></script>
 
   <script id="step-template" type="x-handlebars-template">
     <div id="{{id}}" class="{{class}}"{{#step data}}{{uri}}{{/step}}>{{{file}}}</div>
