--- a/steps/introduction.html
+++ b/steps/introduction.html
@@ -1,12 +1,12 @@
 <h2>Motivations</h2>
 
 <q>
-	Build a fast, responsive, dynamic viewer for NETS data in St. Mary's County.
+	Build a fast, responsive, dynamic viewer for NETS data in Maryland.
 </q>
 
 
 <div class="notes">
-  St. Mary's County NETS Data viewer
+  NETS Data viewer
   Limitations of ArcGIS Server visualizations
 </div>
 
