--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div id="impress" class="steps">
 </div>
-
+<div id="header-box">
   <div id="header" class="ui three column grid">
 	<div class="column left"></div>
 	<div class="column middle"></div>
@@ -32,7 +32,7 @@
 	<img src="images/header-middle.png" />
 	<img src="images/header-right.png" /-->
   </div>
-
+</div>
 
   <script src="bower_components/jquery/jquery.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
